fix alignment of top list of links

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -243,7 +243,7 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 
 .nav {
     display: flex;
-    margin: 0 0 0 -12px;
+    margin: 0 0 -3px -12px;
     padding: 0;
     list-style: none;
 }
